--- a/esp32_node_wifi/data/pym.html
+++ b/esp32_node_wifi/data/pym.html
@@ -55,7 +55,7 @@
             <div class="pass-group">
                 <div class="pass-box">
                     <div class="text-input">
-                        <input id="pass" type="text" placeholder="Pasword" oninput="prepareText2()">
+                        <input id="pass" type="text" placeholder="Password" oninput="prepareText2()">
                         <label>Password</label>
                     </div>
                 </div>
