--- a/esp32_node_wifi/data/pym.html
+++ b/esp32_node_wifi/data/pym.html
@@ -15,9 +15,7 @@
     <div class="content">
         <h1>ESP_CONFIG</h1>
 
-        <div id="led">
-            <div class="led-green" id="lbueno">
-        </div> 
+        <div class="led-green" id="led"></div>
 
         <div class="slider-title">
             <div class="slider-group">
